# Symi-Agent

./: .gitignore  README.md  pyproject.toml
agents/: codex_architect
agents/codex_architect/: cli.py
agents/sample_oracle/: README.md  pyproject.toml
agents/sample_oracle/.github/workflows/: ci.yml
agents/sample_oracle/deploy/: Dockerfile  docker-compose.yml
agents/sample_oracle/deploy/k8s/: deployment.yaml
agents/sample_oracle/src/: agent.py  cli.py
agents/scribe_agent-v2/: cli.py
agents/visionary/: cli.py
architect/: __init__.py  architect.py  builder.py  cli.py  evolution.py  metrics.py  orchestrator.py  parser.py  quantum.py  registry.py  web.py
architect/agents/: oracle.py
config/: security.py
templates/: agent_template.py  index.html
tests/: test_builder.py  test_cli.py  test_metrics.py  test_orchestrator.py  test_registry.py  test_security.py  test_web.py
