[tool.poetry]
name = "symi-agent"
version = "0.1.0"
description = "Minimal implementation of the Architect system"
authors = ["example@example.com"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
requests = "^2.31.0"
fastapi = "^0.110"
uvicorn = "^0.29"
openai = "^1.14"
mistralai = "^0.1.8"
jinja2 = "^3.1"
prometheus-client = "^0.20"
sentry-sdk = "^1.40"
pydantic = "^2.7"

[tool.poetry.scripts]
architect-web = "architect.web:main"

[tool.poetry.extras]
security = ["pydantic", "pydantic-settings"]
web = ["fastapi", "uvicorn", "jinja2"]
metrics = ["prometheus-client", "sentry-sdk"]
llm = ["openai", "mistralai"]
test = [
 "fastapi",
 "jinja2",
 "pydantic",
 "pydantic-settings",
 "prometheus-client"
]

# Le bloc packages doit être à ce niveau, hors de [tool.poetry.dependencies]
packages = [
 { include = "architect" },
 { include = "agents" },
 { include = "config" },
 { include = "codex" } # facultatif si tu utilises ce module
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
